2006-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

        * jaclsh.bat.in:
        * jaclsh.in: Add janino.jar and janinosrc.jar
        to debug classpath when debug is enabled.
        Make sure Mingw test is only run under Win32.
        * jtclsh.in: Make sure Mingw test is only
        run under Win32.
        * src/jacl/tcl/lang/Interp.java (Interp):
        Use StringBuffer instead of Character.toString()
        since it exists only in JDK 1.4.
        * src/jacl/tcl/lang/Procedure.java: Typo.
        * src/tjc/tjc/library/jdk.tcl: Use ':' as
        path seperator unless running under Win32.
        * src/tjc/tjc/library/tjcthread.tcl: Look
        for janino.jar based on location of tcljava.jar
        on the CLASSPATH.
        * tests/tjc/jdk.test: Make tests work under
        Unix and Win32.

2006-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

        Check in SimpleCompiler modifications to support
        compilation of code contained in a Java String.

        * src/janino/org/codehaus/janino/Compiler.java
        (createJavacLikePathIClassLoader): Make method accessible
        in rest of package so it can be used in SimpleCompiler.
        * src/janino/org/codehaus/janino/SimpleCompiler.java
        (SimpleCompiler, compile): Add constructor and compile
        method to support compilation from a String object.
        * src/janino/org/codehaus/janino/util/resource/MultiResourceFinder.java:
        * src/janino/org/codehaus/janino/util/resource/PathResourceFinder.java:
        Add debug statements.

2006-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

        Revert local changes to janino so that tree
        state can be tagged before local mods.

        Tagged as:
            janino-2317-import

2006-02-13  Mo DeJong  <mdejong@users.sourceforge.net>

        Add TJC::compile command to support runtime
        compilation of Tcl procs. Compilation is
        implemented using the TJC compiler and an