@@ -1,0 +1,26 @@
+# Test case for Vector vs ArrayList use inside Var
+# and TclList classes.
+
+proc bench_list_append {} {
+    set l1 [list]
+    set l2 [list]
+    set l3 [list]
+
+    foreach e {1 2 3 4 5 6 7} {
+        lappend l1 $e
+    }
+    foreach e {8 9 10 11 12 13 14} {
+        lappend l2 $e
+    }
+    foreach e {15 16 17 18 19 20 21 22 23 24 25 26 27 28} {
+        lappend l2 $e
+        lappend l3 $e $e
+    }
+    foreach e {29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48} {
+        lappend l3 $e
+    }
+    return [list $l1 $l2 $l3]
+}
+
+bench -desc "bench_list_append" -body {bench_list_append}
+
