@@ -1,3 +1,14 @@
+2006-02-16  Mo DeJong  <mdejong@users.sourceforge.net>
+
+        * tests/tclbench/jacl132.out:
+        * tests/tclbench/lappend.bench:
+        * tests/tclbench/libbench.tcl:
+        * tests/tclbench/list.test:
+        * tests/tclbench/string.bench:
+        * tests/tclbench/tclsh8411.out:
+        * tests/tcljava/javaInterp.test: Add test and
+        bench files.
+
 2006-02-15  Mo DeJong  <mdejong@users.sourceforge.net>
 
         * jaclsh.bat.in:
